# input_analyzer

./: .gitignore  BATCH_EXTRACTION.md  BURN_TRAINING_SUCCESS.md  CONFIG.md  Cargo.toml  GITIGNORE.md  INPUT_ANALYSIS.md  INSTALL_GUIDE.md  ML_TRAINING.md  QUICK_START.md  README.md  RELEASE.md  TAURI_MIGRATION_DESIGN.md  TEMPLATE_PREPARATION.md  TRAINING_DATA_SUMMARY.md  TRAIN_MODEL_USAGE.md  USAGE.md  USER_MANUAL.md  build_error.txt  build_output.txt  config.json.example  input_sample_01_input_history.csv  metadata.json
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: release.yml
input_icon_samples/: README.md
sample_data/: README.md
src/: config.rs  frame_extractor.rs  inference_config.rs  input_analyzer.rs  input_history_extractor.rs  input_recognizer.rs  lib.rs  main.rs  ml_model.rs  model_metadata.rs  model_storage.rs
