[package]
name = "input_analyzer"
version = "0.5.0"
edition = "2021"

[lib]
name = "input_analyzer"
path = "src/lib.rs"

[[bin]]
name = "input_analyzer"
path = "src/main.rs"

[[bin]]
name = "extract_input_history"
path = "src/bin/extract_input_history.rs"

[[bin]]
name = "input_editor_gui"
path = "src/bin/input_editor_gui.rs"

[[bin]]
name = "train_model"
path = "src/bin/train_model.rs"

[[bin]]
name = "test_classification"
path = "src/bin/test_classification.rs"

[[bin]]
name = "merge_test_results"
path = "src/bin/merge_test_results.rs"

[dependencies]
anyhow = "1.0"
image = "0.25"
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-video = "0.23"
gstreamer-pbutils = "0.23"
walkdir = "2.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"

# GUI
eframe = { version = "0.29", optional = true }
egui = { version = "0.29", optional = true }
rfd = { version = "0.15", optional = true }

# Burn機械学習フレームワーク（オプション機能）
# 最新版 0.19.1を使用
burn = { version = "0.19.1", features = ["train", "wgpu"], optional = true }
burn-ndarray = { version = "0.19.1", optional = true }
burn-wgpu = { version = "0.19.1", optional = true }
burn-autodiff = { version = "0.19.1", optional = true }
burn-dataset = { version = "0.19.1", optional = true }

[features]
default = []
ml = ["burn", "burn-ndarray", "burn-wgpu", "burn-autodiff", "burn-dataset"]
gui = ["eframe", "egui", "rfd"]

# ビルド高速化設定
[profile.dev]
opt-level = 1
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
incremental = true
