[package]
name = "input_analyzer"
version = "0.5.0"
edition = "2021"

[lib]
name = "input_analyzer"
path = "src/lib.rs"

[[bin]]
name = "input_editor_gui"
path = "src/bin/input_editor_gui.rs"

[[bin]]
name = "train_model"
path = "src/bin/train_model.rs"

[dependencies]
anyhow = "1.0"
image = "0.25"
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-video = "0.23"
gstreamer-pbutils = "0.23"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tar = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }

# GUI
eframe = { version = "0.29", optional = true }
egui = { version = "0.29", optional = true }
rfd = { version = "0.15", optional = true }

# Burn機械学習フレームワーク（オプション機能）
# 0.19.1を使用、WGPUバックエンド対応
burn = { version = "0.19.1", features = ["train", "wgpu"], optional = true }
burn-ndarray = { version = "0.19.1", optional = true }
burn-wgpu = { version = "0.19.1", optional = true }
burn-autodiff = { version = "0.19.1", optional = true }
burn-dataset = { version = "0.19.1", optional = true }

[features]
default = []
ml = ["burn", "burn-ndarray", "burn-wgpu", "burn-autodiff", "burn-dataset", "tar", "flate2", "clap"]
gui = ["eframe", "egui", "rfd"]

# ビルド高速化設定
[profile.dev]
opt-level = 1
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
incremental = true
